# openapi-ozma-clients

./: .gitignore  pyproject.toml
gamma_client/: __init__.py  errors.py  lint.py  mock.py  py_mock.py  session.py  static.py  type_gen.py
tenet/: __init__.py  errors.py  lint.py  mock.py  py_mock.py  session.py  spec.py  static.py
tests/: conftest.py  test_gamma_error.py  test_lint.py  test_mock.py  test_ordering.py  test_py_mock.py  test_spec_parsing.py  test_state_machine.py  test_static.py  test_violations.py
tests/fixtures/: item_app.py
