[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-ozma-clients"
version = "0.1.0"
description = "Γ-aware OpenAPI client wrappers — enforce admissibility grammar (x-gamma) at call time"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.0",
    # ozmalabs fastapi fork for the test fixture app
    "fastapi @ git+https://github.com/ozmalabs/fastapi.git",
    "pydantic>=2.9",
    "uvicorn>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["gamma_client"]
